syntax = "proto3";

package fpbapi;

import "google/protobuf/timestamp.proto";

option go_package = "feed-service/fpbapi";

service FeedService {
  rpc GetFeed(GetFeedRequest) returns (GetFeedResponse) {}
}

message GetFeedRequest {
  int64 userID = 1;
}

message GetFeedResponse {
  repeated Post posts = 1;
}

message Post {
  int64 id = 1;
  int64 userID = 2;
  string description = 3;
  repeated int64 hashtagsID = 4;
  google.protobuf.Timestamp createdAt = 5;
}
